--- a/app/src/main/res/layout/exemplo_linear_layout.xml
+++ b/app/src/main/res/layout/exemplo_linear_layout.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_marginTop="10dp">
 
     <ImageView
-        android:layout_width="8dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_weight="2"
-        android:src="@mipmap/ic_launcher"
-        android:padding="5dp"
         android:contentDescription="@string/icone_aplicacao"
-        />
+        android:padding="5dp"
+        android:src="@mipmap/ic_launcher" />
 
     <LinearLayout
         android:layout_width="0dp"
