--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,103 +1,132 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:orientation="vertical">
+    android:fitsSystemWindows="true"
+    android:id="@+id/nav_drawer_layout">
 
-    <RelativeLayout
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2">
+        android:layout_height="match_parent">
 
-        <ImageView
-            android:id="@+id/img_chapeu"
+        <com.google.android.material.appbar.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:adjustViewBounds="true"
-            android:scaleType="centerCrop"
-            android:src="@drawable/chapeu" />
+            android:layout_height="wrap_content">
 
-        <LinearLayout
+            <include
+                layout="@layout/menu_toolbar_layout"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize" />
+        </com.google.android.material.appbar.AppBarLayout>
+
+        <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_alignBottom="@+id/img_chapeu"
-            android:layout_centerInParent="true"
-            android:background="#77000000"
-            android:gravity="center"
-            android:orientation="vertical">
+            app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Titulo"
-                android:textAppearance="@android:style/TextAppearance.Large"
-                android:textColor="@android:color/white"
-                android:id="@+id/txt_slider_titulo"/>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical"
+                tools:context=".MainActivity">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Subtítulo"
-                android:textAppearance="@android:style/TextAppearance.Medium"
-                android:textColor="@android:color/white"
-                android:id="@+id/txt_slider_subtítulo"/>
-        </LinearLayout>
-    </RelativeLayout>
+                <RelativeLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="8dp"
-        android:id="@+id/categorias"
-        android:orientation="vertical">
+                    <ImageView
+                        android:id="@+id/img_chapeu"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:adjustViewBounds="true"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/chapeu" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Categorias Populapares"
-            android:textAppearance="@android:style/TextAppearance.Medium"/>
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:layout_alignBottom="@+id/img_chapeu"
+                        android:layout_centerInParent="true"
+                        android:background="#77000000"
+                        android:gravity="center"
+                        android:orientation="vertical">
 
-    </LinearLayout>
+                        <TextView
+                            android:id="@+id/txt_slider_titulo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Titulo"
+                            android:textAppearance="@android:style/TextAppearance.Large"
+                            android:textColor="@android:color/white" />
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="2"
-        android:layout_marginTop="8dp"
-        android:layout_marginLeft="8dp"
-        android:id="@+id/ll_produtos"
-        android:orientation="vertical">
+                        <TextView
+                            android:id="@+id/txt_slider_subtítulo"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Subtítulo"
+                            android:textAppearance="@android:style/TextAppearance.Medium"
+                            android:textColor="@android:color/white" />
+                    </LinearLayout>
+                </RelativeLayout>
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Produtos Recentes"
-            android:textAppearance="@android:style/TextAppearance.Medium"/>
+                <LinearLayout
+                    android:id="@+id/categorias"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_weight="2"
+                    android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:id="@+id/ll_produto_item"
-            android:layout_margin="8dp"
-            android:gravity="center">
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Categorias Populapares"
+                        android:textAppearance="@android:style/TextAppearance.Medium" />
 
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@drawable/camiseta1"/>
+                </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Camiseta XYZ"
-                android:textAppearance="@android:style/TextAppearance.Small"/>
-        </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/ll_produtos"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_marginLeft="8dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_weight="2"
+                    android:orientation="vertical">
 
-    </LinearLayout>
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Produtos Recentes"
+                        android:textAppearance="@android:style/TextAppearance.Medium" />
 
-</LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/ll_produto_item"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="8dp"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/camiseta1" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Camiseta XYZ"
+                            android:textAppearance="@android:style/TextAppearance.Small" />
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+        </androidx.core.widget.NestedScrollView>
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <include layout="@layout/menu_navigation_view"/>
+</androidx.drawerlayout.widget.DrawerLayout>
