--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,5 +2,5 @@
 <resources>
     <color name="colorPrimary">#2FE441</color>
     <color name="colorPrimaryDark">#0E4413</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="colorAccent">#228B22</color>
 </resources>
