--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,17 +38,17 @@
                     android:layout_weight="2">
 
                     <ImageView
-                        android:id="@+id/img_chapeu"
+                        android:id="@+id/img_imperio"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:adjustViewBounds="true"
                         android:scaleType="centerCrop"
-                        android:src="@drawable/chapeu" />
+                        android:src="@drawable/imperium" />
 
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
-                        android:layout_alignBottom="@+id/img_chapeu"
+                        android:layout_alignBottom="@+id/img_imperio"
                         android:layout_centerInParent="true"
                         android:background="#77000000"
                         android:gravity="center"
@@ -115,12 +115,12 @@
                         <ImageView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:src="@drawable/camiseta1" />
+                            android:src="@drawable/stella" />
 
                         <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Camiseta XYZ"
+                            android:text="bebida XYZ"
                             android:textAppearance="@android:style/TextAppearance.Small" />
                     </LinearLayout>
                 </LinearLayout>
