--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -15,15 +15,15 @@
         <ImageView
             android:layout_width="200dp"
             android:layout_height="wrap_content"
-            android:src="@mipmap/ic_launcher_atletica"
+            android:src="@mipmap/ic_launcher_shopping_foreground"
             android:adjustViewBounds="true"/>
 
-        <ImageView
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:src="@drawable/loja_virtual"
-            android:adjustViewBounds="true"
-            android:layout_marginTop="10dp"/>
+<!--        <ImageView-->
+<!--            android:layout_width="200dp"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:src="@drawable/loja_virtual"-->
+<!--            android:adjustViewBounds="true"-->
+<!--            android:layout_marginTop="10dp"/>-->
     </LinearLayout>
 
 </RelativeLayout>
