--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#2FE441</color>
-    <color name="colorPrimaryDark">#0E4413</color>
-    <color name="colorAccent">#228B22</color>
+    <color name="colorPrimary">#FFFF00</color>
+    <color name="colorPrimaryDark">#FF8C00</color>
+    <color name="colorAccent">#ADFF2F</color>
 </resources>
