--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -127,7 +127,7 @@
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_marginTop="8dp"
                     android:layout_marginRight="8dp"
-                    android:hint="Número Dependentes">
+                    android:hint="@string/usuario_perfil_numero_dependentes">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
