--- a/app/src/main/res/layout/activity_produto_detalhe.xml
+++ b/app/src/main/res/layout/activity_produto_detalhe.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -21,20 +20,12 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/app_bar_layout"
-        tools:context=".ProductDetailActivity">
+        tools:context=".ItemsForSaleActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
-
-<!--            <ImageView-->
-<!--                android:id="@+id/img_produto_detalhe"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="320dp"-->
-<!--                android:adjustViewBounds="true"-->
-<!--                android:scaleType="centerCrop"-->
-<!--                android:src="@drawable/camiseta1" />-->
 
             <TextView
                 android:id="@+id/txt_titulo_produto_detalhe"
@@ -42,7 +33,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Titulo do Produto"
+                android:text="Cerveja Stella Artois"
                 android:textAppearance="@android:style/TextAppearance.Medium" />
 
             <TextView
@@ -57,7 +48,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Cor"
+                android:text="@string/compra_produto_quantidade"
                 android:textAppearance="@android:style/TextAppearance.Medium"
                 android:layout_marginTop="8dp"
                 android:layout_marginLeft="8dp"/>
@@ -68,62 +59,31 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginLeft="8dp"
                 app:singleSelection="true"
-                android:id="@+id/chip_group_cor">
+                android:id="@+id/chip_group_quantidade">
 
                 <com.google.android.material.chip.Chip
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:text="Azul"
-                    android:checkable="true"/>
+                    android:text="500ML"/>
 
                 <com.google.android.material.chip.Chip
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:text="Branco"/>
-
-            </com.google.android.material.chip.ChipGroup>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="Tamanho"
-                android:textAppearance="@android:style/TextAppearance.Medium"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="8dp"/>
-
-            <com.google.android.material.chip.ChipGroup
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
-                android:layout_marginLeft="8dp"
-                app:singleSelection="true"
-                android:id="@+id/chip_group_tamanho">
+                    android:text="1L"/>
 
                 <com.google.android.material.chip.Chip
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:text="P"/>
+                    android:text="2L"/>
 
                 <com.google.android.material.chip.Chip
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:text="M"/>
-
-                <com.google.android.material.chip.Chip
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:text="G"/>
-
-                <com.google.android.material.chip.Chip
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:text="GG"/>
+                    android:text="5L"/>
 
             </com.google.android.material.chip.ChipGroup>
 
@@ -135,7 +95,7 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginBottom="8dp"
                 android:backgroundTint="@color/colorAccent"
-                android:text="@string/produto_detalhe_btn_comprar"
+                android:text="@string/compra_produto_btn_comprar"
                 android:textColor="@android:color/white" />
 
             <TextView
@@ -143,7 +103,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
-                android:text="@string/produto_detalhe_txt_descricao"
+                android:text="@string/compra_produto_txt_descricao"
                 android:textAppearance="@android:style/TextAppearance.Medium" />
 
             <TextView
@@ -152,7 +112,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Pinoquio, santanta, gravida de taubate, dicionario, coco ralado"
+                android:text="Bebidas para pessoas quem sabe beber"
                 android:textAppearance="@android:style/TextAppearance.Small" />
 
             <TextView
@@ -168,7 +128,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="8dp"
                 android:layout_marginTop="8dp"
-                android:text="Gustavo: Ain que delicia"
+                android:text="Gustavo: Bom"
                 android:textAppearance="@android:style/TextAppearance.Small" />
 
         </LinearLayout>
