--- a/app/src/main/res/layout/activity_register_produts.xml
+++ b/app/src/main/res/layout/activity_register_produts.xml
@@ -95,15 +95,15 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Spinner
+            android:id="@+id/categorias"
+            style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_marginTop="8dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginTop="8dp"
             android:layout_marginRight="4dp"
-            android:id="@+id/categorias"
-            android:entries="@array/categorias"
-            style="@style/Widget.AppCompat.Spinner.DropDown.ActionBar"/>
+            android:layout_weight="1"
+            android:entries="@array/categorias" />
 
     </LinearLayout>
 
