--- a/app/src/main/res/layout/activity_user_login.xml
+++ b/app/src/main/res/layout/activity_user_login.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".UserLoginActivity"
+    tools:context=".view.activity.UserLoginActivity"
     android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -32,7 +31,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/txt_login_email"
-            android:inputType="textEmailAddress"/>
+            android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -49,7 +48,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/txt_login_senha"
-            android:inputType="textPassword"/>
+            android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
@@ -61,7 +60,7 @@
         android:layout_marginLeft="8dp"
         android:text="@string/usuario_login_entrar"
         style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
-        android:layout_gravity="center"/>
+        android:layout_gravity="center" />
 
     <TextView
         android:layout_width="match_parent"
@@ -71,7 +70,7 @@
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:gravity="center"
-        android:text="Esqueceu sua senha?"/>
+        android:text="Esqueceu sua senha?" />
 
     <View
         android:layout_width="match_parent"
@@ -79,7 +78,7 @@
         android:background="@color/colorPrimary"
         android:layout_marginTop="32dp"
         android:layout_marginLeft="16dp"
-        android:layout_marginRight="16dp"/>
+        android:layout_marginRight="16dp" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -91,7 +90,7 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Não tem cadastro?"/>
+            android:text="Não tem cadastro?" />
 
         <Button
             android:layout_width="wrap_content"
@@ -99,7 +98,7 @@
             android:id="@+id/btn_login_cadastrar"
             android:text="cadastrar"
             android:layout_marginLeft="8dp"
-            style="@style/Widget.MaterialComponents.Button.TextButton"/>
+            style="@style/Widget.MaterialComponents.Button.TextButton" />
 
 
     </LinearLayout>
