--- a/app/src/main/res/layout/activity_produto_detalhe.xml
+++ b/app/src/main/res/layout/activity_produto_detalhe.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/app_bar_layout"
-        tools:context=".ProductDetailActivity">
+        tools:context=".view.activity.ProductDetailActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -60,7 +60,7 @@
                 android:text="Cor"
                 android:textAppearance="@android:style/TextAppearance.Medium"
                 android:layout_marginTop="8dp"
-                android:layout_marginLeft="8dp"/>
+                android:layout_marginLeft="8dp" />
 
             <com.google.android.material.chip.ChipGroup
                 android:layout_width="wrap_content"
@@ -75,13 +75,13 @@
                     android:layout_height="wrap_content"
                     style="@style/Widget.MaterialComponents.Chip.Choice"
                     android:text="Azul"
-                    android:checkable="true"/>
+                    android:checkable="true" />
 
                 <com.google.android.material.chip.Chip
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:text="Branco"/>
+                    android:text="Branco" />
 
             </com.google.android.material.chip.ChipGroup>
 
@@ -91,7 +91,7 @@
                 android:text="Tamanho"
                 android:textAppearance="@android:style/TextAppearance.Medium"
                 android:layout_marginTop="8dp"
-                android:layout_marginLeft="8dp"/>
+                android:layout_marginLeft="8dp" />
 
             <com.google.android.material.chip.ChipGroup
                 android:layout_width="wrap_content"
@@ -105,25 +105,25 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:text="P"/>
+                    android:text="P" />
 
                 <com.google.android.material.chip.Chip
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:text="M"/>
+                    android:text="M" />
 
                 <com.google.android.material.chip.Chip
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:text="G"/>
+                    android:text="G" />
 
                 <com.google.android.material.chip.Chip
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:text="GG"/>
+                    android:text="GG" />
 
             </com.google.android.material.chip.ChipGroup>
 
