--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SplashActivity"
+    tools:context=".view.activity.SplashActivity"
     android:background="@color/colorPrimary"
     android:gravity="center">
 
@@ -12,18 +11,19 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
+
         <ImageView
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:src="@mipmap/ic_launcher_atletica"
-            android:adjustViewBounds="true"/>
+            android:adjustViewBounds="true" />
 
         <ImageView
             android:layout_width="200dp"
             android:layout_height="wrap_content"
             android:src="@drawable/loja_virtual"
             android:adjustViewBounds="true"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp" />
     </LinearLayout>
 
 </RelativeLayout>
